traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:34: error: reassignment to val
    abscisse = abscisse + 1
             ^TraversalZigZag:42: error: reassignment to val
    abscisse = abscisse - 1
             ^