traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {
  var abscisse : Int = 0
  var ordonnee : Int = 0
  var compteur : Int = 0
  var hauteur : Int = getMondeHauteur()
  var largeur : Int = getMondeLargeur()
  while (abscisse < largeur && ordonnee < hauteur - 1) {
    gauche()
    if (estFaceMur()) {
      ligneEst(compteur, abscisse, ordonnee, hauteur, largeur)
      abscisse = largeur - 1
      setPos(abscisse, ordonnee +1) 
    }
    else {
      ligneOuest(compteur, abscisse, ordonnee, hauteur, largeur)
      abscisse = 0
      setPos(abscisse, ordonnee + 1)
    }
    droite()
    ordonnee = ordonnee + 1
    compteur = compteur + 7
  }
  gauche()
  if (estFaceMur())
    ligneEst(compteur, abscisse, ordonnee, hauteur, largeur)
  else
    ligneOuest(compteur, abscisse, ordonnee, hauteur, largeur)
  droite()
}

def ligneEst(c : Int, abscisse : Int, ordonnee : Int, hauteur : Int, largeur : Int) {
  for (colonne <- 1 to largeur) {
    setPos(abscisse, ordonnee)
    ecritMessage(c)
    abscisse = abscisse + 1
  }
}

def ligneOuest(c : Int, abscisse : Int, ordonnee : Int, hauteur : Int, largeur : Int) {
  for (colonne <- 1 to largeur) {
    setPos(abscisse, ordonnee)
    ecritMessage(c)
    abscisse = abscisse - 1
  }
}